--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
-dl, dt, dd, ol, ul, li,
+dl, dt, dd, ol,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
@@ -15,8 +15,9 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	font-family: Inter, Helvetica, sans-serif;
 	vertical-align: baseline;
+  overflow: hidden;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -26,9 +27,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
-ol, ul {
-	list-style: none;
-}
+
 blockquote, q {
 	quotes: none;
 }
@@ -41,3 +40,13 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+.container {
+  background-image: url("./images/light.png");
+  background-repeat: no-repeat;
+  height: 100vh;
+  z-index: -1;
+  background-color: aliceblue;
+}
+
+
