--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -3,7 +3,7 @@ main {
     top: 110px;
     left: 50px;
     background-color: #282D35;
-    background-image: url(../images/reactjs-icon\ 2.png);
+    background-image: url(../images/reactjs-icon2.png);
     background-repeat: no-repeat;
     background-position: 100% 50%;
     border-radius: 0px 0px 10px 10px;
